--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "concurrently": "^3.6.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "mongoose": "^5.1.7"
+    "mongoose": "^5.1.7",
+    "shortid": "^2.2.8"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
